docs/api/qiskit/0.24/qiskit.optimization.converters.QuadraticProgramToQubo.mdx
---
title: QuadraticProgramToQubo
description: API reference for qiskit.optimization.converters.QuadraticProgramToQubo
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.optimization.converters.QuadraticProgramToQubo
---

<span id="qiskit-optimization-converters-quadraticprogramtoqubo" />

# qiskit.optimization.converters.QuadraticProgramToQubo

<Class id="qiskit.optimization.converters.QuadraticProgramToQubo" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/optimization/converters/quadratic_program_to_qubo.py" signature="QuadraticProgramToQubo(penalty=None)">
  Convert a given optimization problem to a new problem that is a QUBO.

  **Examples**

  ```python
  >>> from qiskit.optimization.problems import QuadraticProgram
  >>> from qiskit.optimization.converters import QuadraticProgramToQubo
  >>> problem = QuadraticProgram()
  >>> # define a problem
  >>> conv = QuadraticProgramToQubo()
  >>> problem2 = conv.convert(problem)
  ```

  **Parameters**

  **penalty** (`Optional`\[`float`]) – Penalty factor to scale equality constraints that are added to objective. If None is passed, penalty factor will be automatically calculated.

  ### \_\_init\_\_

  <Function id="qiskit.optimization.converters.QuadraticProgramToQubo.__init__" name="__init__" signature="__init__(penalty=None)">
    **Parameters**

    **penalty** (`Optional`\[`float`]) – Penalty factor to scale equality constraints that are added to objective. If None is passed, penalty factor will be automatically calculated.
  </Function>

  ## Methods

  |                                                                                                                                                                                                |                                                                                                                |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.optimization.converters.QuadraticProgramToQubo.__init__ "qiskit.optimization.converters.QuadraticProgramToQubo.__init__")(\[penalty])                                     | **type penalty**`Optional`\[`float`]                                                                           |
  | [`convert`](#qiskit.optimization.converters.QuadraticProgramToQubo.convert "qiskit.optimization.converters.QuadraticProgramToQubo.convert")(problem)                                           | Convert a problem with linear equality constraints into new one with a QUBO form.                              |
  | [`decode`](#qiskit.optimization.converters.QuadraticProgramToQubo.decode "qiskit.optimization.converters.QuadraticProgramToQubo.decode")(result)                                               | DEPRECATED Decode a result into another form using the information of conversion.                              |
  | [`encode`](#qiskit.optimization.converters.QuadraticProgramToQubo.encode "qiskit.optimization.converters.QuadraticProgramToQubo.encode")(problem)                                              | DEPRECATED Encode a QuadraticProgram into another form and keep the information required to decode the result. |
  | [`get_compatibility_msg`](#qiskit.optimization.converters.QuadraticProgramToQubo.get_compatibility_msg "qiskit.optimization.converters.QuadraticProgramToQubo.get_compatibility_msg")(problem) | Checks whether a given problem can be solved with this optimizer.                                              |
  | [`interpret`](#qiskit.optimization.converters.QuadraticProgramToQubo.interpret "qiskit.optimization.converters.QuadraticProgramToQubo.interpret")(result)                                      | Convert a result of a converted problem into that of the original problem.                                     |
  | [`is_compatible`](#qiskit.optimization.converters.QuadraticProgramToQubo.is_compatible "qiskit.optimization.converters.QuadraticProgramToQubo.is_compatible")(problem)                         | Checks whether a given problem can be solved with the optimizer implementing this method.                      |

  ## Attributes

  |                                                                                                                                             |                                                |
  | ------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------- |
  | [`penalty`](#qiskit.optimization.converters.QuadraticProgramToQubo.penalty "qiskit.optimization.converters.QuadraticProgramToQubo.penalty") | Returns the penalty factor used in conversion. |

  ### convert

  <Function id="qiskit.optimization.converters.QuadraticProgramToQubo.convert" name="convert" signature="convert(problem)">
    Convert a problem with linear equality constraints into new one with a QUBO form.

    **Parameters**

    **problem** (`QuadraticProgram`) – The problem with linear equality constraints to be solved.

    **Return type**

    `QuadraticProgram`

    **Returns**

    The problem converted in QUBO format.

    **Raises**

    [**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – In case of an incompatible problem.
  </Function>

  ### decode

  <Function id="qiskit.optimization.converters.QuadraticProgramToQubo.decode" name="decode" signature="decode(result)">
    DEPRECATED Decode a result into another form using the information of conversion.

    **Return type**

    `OptimizationResult`
  </Function>

  ### encode

  <Function id="qiskit.optimization.converters.QuadraticProgramToQubo.encode" name="encode" signature="encode(problem)">
    DEPRECATED Encode a QuadraticProgram into another form and keep the information required to decode the result.

    **Return type**

    `QuadraticProgram`
  </Function>

  ### get\_compatibility\_msg

  <Function id="qiskit.optimization.converters.QuadraticProgramToQubo.get_compatibility_msg" name="get_compatibility_msg" signature="static get_compatibility_msg(problem)">
    Checks whether a given problem can be solved with this optimizer.

    Checks whether the given problem is compatible, i.e., whether the problem can be converted to a QUBO, and otherwise, returns a message explaining the incompatibility.

    **Parameters**

    **problem** (`QuadraticProgram`) – The optimization problem to check compatibility.

    **Return type**

    `str`

    **Returns**

    A message describing the incompatibility.
  </Function>

  ### interpret

  <Function id="qiskit.optimization.converters.QuadraticProgramToQubo.interpret" name="interpret" signature="interpret(result)">
    Convert a result of a converted problem into that of the original problem.

    **Parameters**

    **result** (`OptimizationResult`) – The result of the converted problem.

    **Return type**

    `OptimizationResult`

    **Returns**

    The result of the original problem.
  </Function>

  ### is\_compatible

  <Function id="qiskit.optimization.converters.QuadraticProgramToQubo.is_compatible" name="is_compatible" signature="is_compatible(problem)">
    Checks whether a given problem can be solved with the optimizer implementing this method.

    **Parameters**

    **problem** (`QuadraticProgram`) – The optimization problem to check compatibility.

    **Return type**

    `bool`

    **Returns**

    Returns True if the problem is compatible, False otherwise.
  </Function>

  ### penalty

  <Function id="qiskit.optimization.converters.QuadraticProgramToQubo.penalty" name="penalty" signature="property penalty">
    Returns the penalty factor used in conversion.

    **Return type**

    `Optional`\[`float`]

    **Returns**

    The penalty factor used in conversion.
  </Function>
</Class>

